# whoop-mcp-server

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  setup.py  setup_direct.py  tsconfig.tsbuildinfo
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
cloudflare-worker/: .dev.vars.example  README.md  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
cloudflare-worker/src/: access-handler.ts  index.ts  types.ts  whoop.ts
cloudflare-worker/tests/: access-handler.test.ts  whoop.test.ts
components/: daily-decision.tsx  header.tsx  info-hint.tsx  metabolic-efficiency.tsx  metric-card.tsx  nervous-system-trends.tsx  readiness-hud.tsx  sleep-architecture.tsx
docs/: INSTALLATION.md  TROUBLESHOOTING.md  cloudflare-remote-mcp.md
examples/: codex_config_template.toml  usage_examples.md
lib/: dashboard-view-model.ts
scripts/: bootstrap_whoop_to_cf.py  export_whoop_data.py  relink_whoop_cf.sh
src/: auth_manager.py  config.py  dashboard_analysis.py  validation.py  whoop_client.py  whoop_dashboard_server.py  whoop_mcp_server.py
src/web/: app.js  index.html  styles.css
tests/: test_auth_manager.py  test_dashboard_analysis.py  test_export_whoop_csv.py  test_validation.py  test_whoop_client.py  test_whoop_client_surface.py  test_whoop_dashboard_server_surface.py  test_whoop_mcp_server_surface.py  test_whoop_mcp_server_transport.py
